# kelk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/: codecov.yml
.github/workflows/: publish.py  publisher.yml
crates/allocator/: Cargo.toml  README.md
crates/allocator/src/: lib.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: lib.rs
crates/env/: Cargo.toml  README.md
crates/env/src/: api.rs  error.rs  import.rs  lib.rs
crates/kelk/: Cargo.toml  README.md
crates/kelk/src/: context.rs  lib.rs  mock.rs
crates/kelk/src/blockchain/: address.rs  error.rs  mock.rs
crates/kelk/src/storage/: codec.rs  error.rs  mock.rs  mod.rs
crates/kelk/src/storage/bst/: mod.rs
crates/kelk/src/storage/hash_table/: header.rs  mod.rs
crates/kelk/src/storage/linked_list/: header.rs  mod.rs
crates/kelk/src/storage/str/: mod.rs
crates/kelk/src/storage/vec/: mod.rs
examples/: README.md
examples/erc20/: Cargo.toml
examples/erc20/src/: erc20.rs  erc20_test.rs
examples/erc721/: Cargo.toml
examples/erc721/src/: contract.rs  erc721.rs  lib.rs  message.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: contract.rs
