[package]
name = "kelk-allocator"
version = "0.2.0"
edition = "2021"
authors = ["Pactus blockchain <admin@pactus.org>"]
license = "MIT"
homepage = "https://pactus.org/"
repository = "https://github.com/pactus-project/kelk"
description = "Kelk-allocator providing memory allocator support for smart contracts in Pactus blockchain."


[dependencies]
wee_alloc = { version = "0.4", default-features = false }
