[package]
name = "kelk-allocator"
version = "0.3.0"
edition = "2021"
authors = ["Pactus blockchain <admin@pactus.org>"]
license = "BSD 4-Clause"
homepage = "https://pactus.org/"
repository = "https://github.com/pactus-project/kelk"
description = "Kelk-allocator providing memory allocator support for smart contracts in Pactus blockchain."


[dependencies]
wee_alloc = { version = "0.4", default-features = false }
