[package]
name = "kelk-env"
version = "0.3.0"
edition = "2021"
authors = ["Pactus blockchain <admin@pactus.org>"]
license = "BSD 4-Clause"
homepage = "https://pactus.org/"
repository = "https://github.com/pactus-project/kelk"
description = "Kelk-env is a Low-level interface for interacting with Tanour (Wasm executor) in Pactus blockchain."


[dependencies]
minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
